feat: Client implementation
