# backend/docs/openapi.json
@@ -37,10 +37,30 @@
     },
     "/api/nfts": {
       "get": {
-        "tags": ["api"],
+        "tags": [
+          "api"
+        ],
         "summary": "NFTs getter",
         "description": "Returns all the NFTs",
         "operationId": "getNfts",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "skip",
+            "schema": {
+              "type": "string",
+              "description": "Pagination offset"
+            }
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "string",
+              "description": "Pagination limit"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "NFTs",
@@ -66,7 +86,9 @@
     },
     "/api/nft": {
       "get": {
-        "tags": ["api"],
+        "tags": [
+          "api"
+        ],
         "summary": "NFT getter",
         "description": "Returns a specific NFT by ID",
         "operationId": "getNft",
@@ -104,7 +126,9 @@
         }
       },
       "patch": {
-        "tags": ["api"],
+        "tags": [
+          "api"
+        ],
         "summary": "NFT patcher",
         "description": "Updates the NFT owner according to its last purchase",
         "operationId": "patchNft",
@@ -164,7 +188,10 @@
   "components": {
     "schemas": {
       "Nft": {
-        "required": ["id", "name"],
+        "required": [
+          "id",
+          "name"
+        ],
         "type": "object",
         "properties": {
           "id": {
